--- a/dockerfiles/Dockerfile.RHEL.9
+++ b/dockerfiles/Dockerfile.RHEL.9
@@ -1,4 +1,4 @@
-# A docker file to build a CI image for Ubuntu 21.10.
+# A docker file to build a CI image for RedHat Enterprise Linux 9.
 #
 # Author: Christian Kauten (ckauten@sensoryinc.com)
 #
@@ -27,24 +27,22 @@
 # MARK: Image Setup
 # ----------------------------------------------------------------------------
 
-# Download base image Ubuntu 21.10.
-FROM ubuntu:21.10
+# Download base image RHEL 9.
+FROM registry.access.redhat.com/ubi9
 # Set the maintainer label for this Docker image.
 LABEL MAINTAINER "Christian Kauten ckauten@sensoryinc.com"
 # Set the time-zone of the machine.
 ENV TZ=US/Mountain
-# Disable the interactive dialogue for `dpkg` (running behind apt-get).
-ARG DEBIAN_FRONTEND=noninteractive
 
 # ----------------------------------------------------------------------------
 # MARK: Dependencies
 # ----------------------------------------------------------------------------
 
-# Update Ubuntu software repositories.
-RUN apt-get --fix-missing update
-RUN apt-get -y upgrade
+# Update RHEL software repositories.
+RUN yum -y update
+RUN yum -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git
+RUN yum install -y autoconf libtool pkg-config gcc gcc-c++ git cmake
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
@@ -59,6 +57,7 @@ RUN printf "cmake_minimum_required(VERSION 3.11)\nproject(clone-grpc)\ninclude(c
 # Enable verbose output from `FetchContent` to monitor the cloning of gRPC,
 # which can be slow.
 RUN mkdir /cpp-sdk/build && cd /cpp-sdk/build && cmake -DGRPC_FETCHCONTENT=ON -DFETCHCONTENT_QUIET=OFF ..
+RUN cd /cpp-sdk/build && make -j`nproc`
 
 # ----------------------------------------------------------------------------
 # MARK: Source Files
@@ -70,3 +69,4 @@ ADD ./proto /cpp-sdk/proto
 ADD ./include /cpp-sdk/include
 ADD ./src /cpp-sdk/src
 ADD ./tests /cpp-sdk/tests
+ADD ./examples /cpp-sdk/examples
