--- a/dockerfiles/Dockerfile.Ubuntu.22.04
+++ b/dockerfiles/Dockerfile.Ubuntu.22.04
@@ -1,4 +1,4 @@
-# A docker file to build a CI image for Ubuntu 20.04.
+# A docker file to build a CI image for Ubuntu 22.04.
 #
 # Author: Christian Kauten (ckauten@sensoryinc.com)
 #
@@ -27,8 +27,8 @@
 # MARK: Image Setup
 # ----------------------------------------------------------------------------
 
-# Download base image Ubuntu 20.04.
-FROM ubuntu:20.04
+# Download base image Ubuntu 22.04.
+FROM ubuntu:22.04
 # Set the maintainer label for this Docker image.
 LABEL MAINTAINER "Christian Kauten ckauten@sensoryinc.com"
 # Set the time-zone of the machine.
@@ -44,17 +44,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get --fix-missing update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config git
-
-# Install the latest version of CMake. This is based on the official CMake
-# documentation for Ubuntu 20.04 here: https://apt.kitware.com/
-RUN apt-get install -y gpg wget
-RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
-RUN echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ focal main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null
-RUN apt-get update
-# RUN rm /usr/share/keyrings/kitware-archive-keyring.gpg
-# RUN apt-get install -y kitware-archive-keyring
-RUN apt-get install -y cmake
+RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
